--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ function transformToAssocArray( prmstr ) {
     for ( var i = 0; i < prmarr.length; i++) {
         var tmparr = prmarr[i].split("=");
         
-        tmparr[1] = tmparr[1].replace("+", " ")
+        tmparr[1] = tmparr[1].replace(/+/g, " ")
         console.log(tmparr)
         params[tmparr[0]] = tmparr[1];
     }
