--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                             <table width="100%">
                                 <tbody><tr style="font-size: 20px">
                                     <td style="border-right: solid 1px">ESPIRAL SRL</td>
-                                    <td style="border-right: solid 1px">PROXIMO BUQUE 5</td>
+                                    <td style="border-right: solid 1px">01</td>
                                     <td></td>
                                 </tr>
                             </tbody></table>
                         </td>
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8;" colspan="3"></td>
-                        <td style="font-size: 30px;BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: #d4d0c8" colspan="14" align="center"><b id="HAWB2">HAWB: 3250007119</b></td>
+                        <td style="font-size: 30px;BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: #d4d0c8" colspan="14" align="center"><b id="HAWB2">HBL: 3250007119</b></td>
                     </tr>
                     <tr>
                         <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid;font-size: 13px" colspan="12">Shipper's Name and
@@ -35,7 +35,7 @@
                     <tr>
                         <td style="font-size:13px;BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid" colspan="12"><br style="mso-data-placement:same-cell;" id="">&nbsp;<span id="Remitente">YAILI VEGA BORREGO</span><br style="mso-data-placement:same-cell;" >&nbsp;<span id="Direccion">1761 W HILLSBOROUGH AVE TAMPA FL 33603</span><br style="mso-data-placement:same-cell;">&nbsp;
                         </td>
-                        <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid" colspan="10"><b>Air WayBill</b>&nbsp;<br style="mso-data-placement:same-cell;"><br style="mso-data-placement:same-cell;"><b>&nbsp;&nbsp;</b></td>
+                        <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid" colspan="10"><b></b>&nbsp;<br style="mso-data-placement:same-cell;"><br style="mso-data-placement:same-cell;"><b>&nbsp;&nbsp;</b></td>
                     </tr>
                     <tr>
                         <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid" rowspan="2" colspan="18">
@@ -69,8 +69,8 @@
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="18">Issuing Carrier's Agent
                             Name and City<br style="mso-data-placement:same-cell;">
                             ESPIRAL SRL<br>
-        3235 W Columbus Dr Tampa Fl 33607<br style="mso-data-placement:same-cell;">
-        
+                            <br style="mso-data-placement:same-cell;">
+                            AV. Independencia No. 607, Sector Gazcue, Santo Domingo, República Dominicana
                         </td>
                         <td valign="top" style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid;BORDER-BOTTOM: windowtext 1pt solid;  font-size: 12px" rowspan="3" colspan="10">Accounting
                             Information<br style="mso-data-placement:same-cell;">
@@ -163,7 +163,7 @@
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: windowtext 1pt solid; font-size: 12px"></td>
                     </tr>
                     <tr>
-                        <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="11">Airport of
+                        <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="11">Port of
                             Destination
                         </td>
                         <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: #d4d0c8; font-size: 12px">Flight / Date
@@ -181,7 +181,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="font-size:12px;BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid" colspan="11">&nbsp;LA HABANA, CARRETERA DEL WAJAY KM 1 1/2,<br> 648-3100, 648-3101, 648-3102
+                        <td style="font-size:12px;BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid" colspan="11">&nbsp;Puerto del Mariel<br><br>
                         </td><td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="4">&nbsp;</td>
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="3">&nbsp;</td>
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="6">XXX
@@ -371,7 +371,7 @@
                         <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: #d4d0c8; font-size: 12px" rowspan="2" colspan="5">&nbsp;
                         </td>
                         <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: #d4d0c8; font-size: 12px"></td>
-                        <td style="font-size:20px;BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: #d4d0c8" rowspan="2" colspan="5">&nbsp;HAWB:
+                        <td style="font-size:20px;BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: #d4d0c8" rowspan="2" colspan="5">&nbsp;HBL:
                         </td>
                         <td id="HAWB" style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: #d4d0c8; font-size: 25px" rowspan="2" colspan="2">3250007119
                         </td>
@@ -467,7 +467,7 @@
             </td>
         </tr>
             </tbody></table>
-        </div><div id="id_div_warning_info" class="modal-overlay"><div class="modal"><div class="warning-bar"><label id="id_lbl_warning_info" class="comp">Error</label></div><div class="modal-content"><p id="id_p_warning_info">Información a mostrar</p></div><div class="modal-buttons"><button type="button" class="comp green" id="id_btn_info_ok" onclick="dialog.hideInfoDlg();"><i class="icon material-icons">save</i>OK</button></div></div></div><script type="text/javascript" src="js/solved/utils.js"></script><script type="text/javascript" src="js/solved/dom.js"></script><script type="text/javascript" src="js/solved/dialog.js"></script><script type="text/javascript" src="js/dbilling.js"></script><script type="text/javascript" src="js/solved/manageajax.js"></script><script type="text/javascript">var dom=new Dom();var utils=new Utils();</script>  </body>
+        </div>
     <script>
         function getSearchParameters() {
     var prmstr = window.location.search.substr(1);
