--- a/index.html
+++ b/index.html
@@ -79,15 +79,13 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="11">Agent's IATA
-                            Code
-                        </td>
-                        <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="7">Account No.
+                        <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="11">                        </td>
+                            <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="7">
                         </td>
                     </tr>
                     <tr>
-                        <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid;BORDER-BOTTOM: windowtext 1pt solid; font-size: 12px" colspan="18">Airport of Departure
-                            (Addr. Of First Carrier) and Requested Routing<br style="mso-data-placement:same-cell;">
+                        <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid;BORDER-BOTTOM: windowtext 1pt solid; font-size: 12px" colspan="18">Port of Departure
+                            Puerto Caucedo<br style="mso-data-placement:same-cell;">
                             
                         </td>
                     </tr>
@@ -264,7 +262,7 @@
                         </td>
                         <td align="center" style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="5" id="pesoUno">19.96
                         </td>
-                        <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="2">Lb
+                        <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="2">Kg
                         </td>
                         <td style="BORDER-BOTTOM: #d4d0c8; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: #d4d0c8; BORDER-RIGHT: windowtext 1pt solid">
                         </td>
@@ -274,7 +272,7 @@
                         <td align="center" style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="2"></td>
                         <td align="center" style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="5">
                         </td>
-                        <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 13px" colspan="3">&nbsp; CAJA DE <span id="peso">44</span> LB <span id="tipoDeMercancia">MISCELANEAS</span> <br style="mso-data-placement:same-cell;">
+                        <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 13px" colspan="3">&nbsp; <span id="tipoDeMercancia">MISCELANEAS</span> <br style="mso-data-placement:same-cell;">
                         </td>
                     </tr>
                     <tr>
@@ -282,7 +280,7 @@
                         </td>
                         <td align="center" style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="5" id="pesoTres">&nbsp;19.96
                         </td>
-                        <td align="center" style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="2">&nbsp;</td>
+                        <td align="center" style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: black; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="2">Lb</td>
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: windowtext 1pt solid">&nbsp;</td>
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: #d4d0c8; BACKGROUND-COLOR: transparent; BORDER-TOP: #d4d0c8; BORDER-RIGHT: windowtext 1pt solid">&nbsp;</td>
                         <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="3">&nbsp;</td>
@@ -290,7 +288,7 @@
                         <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="2">&nbsp;</td>
                         <td align="center" style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid" colspan="5" class="valorDeclarado">54.89
                         </td>
-                        <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 15px" colspan="3">&nbsp;</td>
+                        <td style="BORDER-BOTTOM: black 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent;  BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 15px" colspan="3"></td>
                     </tr><tr>
                         <td style="BORDER-BOTTOM: windowtext 1pt solid; BORDER-LEFT: windowtext 1pt solid; BACKGROUND-COLOR: transparent; BORDER-TOP: windowtext 1pt solid; BORDER-RIGHT: black 1pt solid; font-size: 12px" colspan="4">Prepaid
                         </td>
@@ -506,8 +504,8 @@ function transformToAssocArray( prmstr ) {
         document.getElementById("peso").innerHTML = params.PesoUno
         document.getElementById("peso").innerHTML = params.PesoUno
         document.getElementById("pesoUno").innerHTML = params.PesoUno
-        document.getElementById("pesoDos").innerHTML = params.PesoUno
-        document.getElementById("pesoTres").innerHTML = params.PesoUno
+        document.getElementById("pesoDos").innerHTML = params.PesoUno 
+        document.getElementById("pesoTres").innerHTML = Math.round(params.PesoUno * 2.2 * 100) / 100
         document.getElementById("Consignatario").innerHTML = params.Consignatario
         document.getElementById("DireccionDelCon").innerHTML = params.DireccionDelCon
         document.getElementsByClassName("cant")[0].innerHTML = params.cant
