--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                             <table width="100%">
                                 <tbody><tr style="font-size: 20px">
                                     <td style="border-right: solid 1px">ESPIRAL SRL</td>
-                                    <td style="border-right: solid 1px">01</td>
+                                    <td style="border-right: solid 1px">CUBANACAN EXPRESS</td>
                                     <td></td>
                                 </tr>
                             </tbody></table>
